reorganized folder structure. Created index page and simple routing

--- a/views/html_boilerplate.ejs
+++ b/views/html_boilerplate.ejs
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
-
+        <% include partials/metadata %>
+        <% include partials/styles %>
+        
     </head>    
     <body>
         <% include partials/header %>
+
+
+        <% include partials/scripts %>
     </body>
 </html>
