--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
-<div>
-    <div>
-        <a href="#">Home</a>
-        <a href="#">Search</a>
-        <a href="#">Options</a>
+<div class="toolbar">
+    <div class="toolbar-inner">
+        <a href="/home">Home</a>
+        <a href="/search">Search</a>
+        <a class="toolbar-right" href="/options">Options</a>
     </div>
 </div>
