--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,45 +3,48 @@
     <head>
         <% include partials/metadata %>
         <% include partials/styles %>
-        
+
     </head>    
     <body>
         <% include partials/header %>
-
         <div class="container">
             <h1>Welcome to The Cocial Cedia!</h1>
-            <div>
-                <h3>Login</h3>
-                <form action="/login" method="POST">
-                    <input type="email" placeholder="E-mail" name="email">
-                    <input type="password" placeholder="Password" name="password">
-                    <button>Login</button>
-                </form>
-            </div>
-            <h4>or</h4>
-            <div>
-                <h3>Create an account:</h3>
-                <form action="/createaccount" method="POST">
-                    <div>
-                        <input type="text" placeholder="Full name" name="user_name">
-                    </div>
-                    <div>
+            <div class="col-sm-12 col-md-6">
+                <div>
+                    <h3>Login</h3>
+                    <form action="/login" method="POST">
                         <input type="email" placeholder="E-mail" name="email">
-                    </div>
-                    <div>
                         <input type="password" placeholder="Password" name="password">
-                    </div>
-                    <div>
-                        <input type="password" placeholder="Repeat password" name="password_repeat">
-                    </div>
-                    <div>
-                        <input type="text" placeholder="Gender" name="gender">
-                    </div>
-                    <div>
-                        <button>Register</button>
-                    </div>
-                </form>
-                
+                        <button>Login</button>
+                    </form>
+                </div>
+                <h4>or</h4>
+                <div>
+                    <h3>Create an account:</h3>
+                    <form action="/createaccount" method="POST">
+                        <div>
+                            <input type="text" placeholder="Full name" name="user_name">
+                        </div>
+                        <div>
+                            <input type="email" placeholder="E-mail" name="email">
+                        </div>
+                        <div>
+                            <input type="password" placeholder="Password" name="password">
+                        </div>
+                        <div>
+                            <input type="password" placeholder="Repeat password" name="password_repeat">
+                        </div>
+                        <div>
+                            <input type="text" placeholder="Gender" name="gender">
+                        </div>
+                        <div>
+                            <button>Register</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-6">
+                <img src="/images/tcc-logo.png" alt="the cocial cedia logo" width="300px">
             </div>
         </div>
 
