novo gradiente de fundo e navbar alterada para navbar do bootstrap

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
         <% include partials/styles %>
 
     </head>    
-    <body>
+    <body class="hieroent">
         <% include partials/header %>
         <div class="">
             <div class="profile-pic">
