--- a/public/styles/thecocialcedia.css
+++ b/public/styles/thecocialcedia.css
@@ -10,12 +10,12 @@ body {
     background-color: lightgrey;
 }
 
-form div {
+.indexForm div {
     margin-top:5px;
 }
 
-.toolbar-inner a {
-    font-size: 20px;
+.toolbar-item a {
+    font-size: 1.5em;
     color: white;
     margin-top: 5px;
     margin-bottom: 5px;
@@ -31,21 +31,42 @@ form div {
 * 
 * 
 */
-.toolbar {
-    background-color: gray;
-    height: 30px;
-    padding-right: 70px;
-    padding-left: 70px;
+.hieroent {
+    /* background: #FC5C7D;
+    background: -webkit-linear-gradient(to top, #6A82FB, #FC5C7D);  
+    background: linear-gradient(to top, #6A82FB, #FC5C7D);  */
+
+    background: #24c6dc; 
+    background: -webkit-linear-gradient(to bottom, #24c6dc, #514a9d); 
+    background: linear-gradient(to bottom, #24c6dc, #514a9d); 
+
+
+    /* background: #40E0D0;
+    background: -webkit-linear-gradient(to top, #FF0080, #FF8C00, #40E0D0);
+    background: linear-gradient(to top, #FF0080, #FF8C00, #40E0D0);
+    */
+
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
-.toolbar-inner {
+/* .toolbar {
+    width: 100%;
+    height: 10%;
+    position: sticky;
+    margin-top: 0;
+    background-color: gray;
+    
+}
+
+.toolbar-item {
 
 }
 
 .toolbar-right {
     margin-left: 69%;
     margin-right: 0;
-}
+} */
 
 /* ID */
 /* 
