--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
         <% include partials/styles %>
 
     </head>    
-    <body>
+    <body class="hieroent">
         <% include partials/header %>
         <div class="container">
             <div class="jumbotron" style="margin-top: 10px">
@@ -14,7 +14,7 @@
             <div>
                 <div class="col-sm-12 col-md-5">
                     <h2>Login</h2>
-                    <form class="form-group" action="/login" method="POST">
+                    <form class="form-group indexForm" action="/login" method="POST">
                         <div>
                             <input class="form-control" type="email" placeholder="E-mail" name="email">
                         </div>
@@ -31,7 +31,7 @@
                 </div>
                 <div class="col-sm-12 col-md-5">
                     <h2>Create an account:</h2>
-                    <form class="form-group" action="/createaccount" method="POST">
+                    <form class="form-group indexForm" action="/createaccount" method="POST">
                         <div>
                             <input class="form-control" type="text" placeholder="Full name" name="user_name">
                         </div>
