--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,63 @@
-<div class="toolbar">
-    <div class="toolbar-inner">
-        <a href="/home">Home</a>
-        <a href="/search">Search</a>
-        <a class="toolbar-right" href="/options">Options</a>
+<!-- <div class="col-sm-12 toolbar">
+    <div class="container">
+            <div class="col-sm-2 col-md-2 toolbar-item">
+                <a href="/home">Home</a>
+            </div>
+            <div class="col-sm-2 col-md-2 toolbar-item">
+                <a href="/search">Search</a>
+            </div>
+            <div class="col-sm-2 col-md-2 toolbar-item">
+                <a href="/options">Options</a>
+            </div>
     </div>
-</div>
+</div> -->
+
+<nav class="navbar navbar-default">
+        <div class="container-fluid">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/index">TCC</a>
+          </div>
+      
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="/home">Home <span class="sr-only">(current)</span></a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Zones<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">All</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="#">Posts</a></li>
+                  <li><a href="#">Photos</a></li>
+                  <li><a href="#">Videos</a></li>
+                  <li><a href="#">Discussions</a></li>
+                </ul>
+              </li>
+            </ul>
+            <form class="navbar-form navbar-left">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="">
+              </div>
+              <button type="submit" class="btn btn-default">Search</button>
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+              <li><a href="#">My Profile</a></li>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Options<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Manage</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="#">Logout</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </div><!-- /.container-fluid -->
+      </nav>
