--- a/public/styles/thecocialcedia.css
+++ b/public/styles/thecocialcedia.css
@@ -77,4 +77,34 @@ body {
 * 
 */
 
+#user-menu-div {
+    background-color: lightgray;
+    border: 1px solid gray;
+    height: 100%;
+    padding: 0;
+}
 
+#user-menu {
+    list-style: none;
+	margin: 0;
+    padding: 0;
+    font-size: 20px;
+}
+
+#user-menu li {
+    padding: 0 0 0 15px;
+    transition: 0.2s linear;
+}
+
+#user-menu li:hover {
+    transition: 0.2s linear;
+    padding-left: 30px;
+}
+
+#user-menu li:nth-of-type(2n) {
+    background-color: #f7f7f7;
+}
+
+#page-content {
+    border: 1px solid gray;
+}
